--- a/src/REstate.Service.AdminUI/wwwroot/index.html
+++ b/src/REstate.Service.AdminUI/wwwroot/index.html
@@ -16,10 +16,14 @@
     <script src="./node_modules/systemjs/dist/system-polyfills.js"></script>
     <script src="./node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
 
+    <script src="./node_modules/json-editor/dist/jsoneditor.min.js"></script>
+    <script src="./node_modules/viz.js/viz.js"></script>
+
     <script src="./node_modules/angular2/bundles/angular2-polyfills.js"></script>
     <script src="./node_modules/systemjs/dist/system.src.js"></script>
     <script src="./node_modules/rxjs/bundles/Rx.js"></script>
     <script src="./node_modules/angular2/bundles/angular2.dev.js"></script>
+    <script src="./node_modules/angular2/bundles/http.dev.js"></script>
     <script src="./node_modules/angular2/bundles/router.dev.js"></script>
 
     <!-- 2. Configure SystemJS -->
@@ -44,8 +48,7 @@
 
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="./node_modules/json-editor/dist/jsoneditor.min.js"></script>
-    <script src="./node_modules/viz.js/viz.js"></script>
+
     
 </body>
 </html>
