--- a/src/REstate.Service.AdminUI/wwwroot/index.html
+++ b/src/REstate.Service.AdminUI/wwwroot/index.html
@@ -7,8 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap-theme.min.css">
+    <!--<link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap-theme.min.css">-->
+    <!--<link rel="stylesheet" href="./css/flat-ui.css">-->
     <link rel="stylesheet" href="./styles.css">
+
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
@@ -49,6 +51,6 @@
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
-    
+
 </body>
 </html>
