--- a/src/REstate.Service.AdminUI/wwwroot/index.html
+++ b/src/REstate.Service.AdminUI/wwwroot/index.html
@@ -8,7 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <!--<link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap-theme.min.css">-->
-    <!--<link rel="stylesheet" href="./css/flat-ui.css">-->
+    <link rel="stylesheet" href="./css/ripples.min.css">
+    <link rel="stylesheet" href="./css/bootstrap-material-design.min.css">
     <link rel="stylesheet" href="./styles.css">
 
 
@@ -50,6 +51,12 @@
 
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./js/ripples.min.js"></script>
+    <script src="./js/material.min.js"></script>
+    <script src="./js/json-editor.material.theme.js"></script>
+    <script>
+        $.material.init();
+    </script>
 
 
 </body>
