--- a/src/REstate.Service.AdminUI/wwwroot/index.html
+++ b/src/REstate.Service.AdminUI/wwwroot/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <!--<link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap-theme.min.css">-->
     <link rel="stylesheet" href="./css/ripples.min.css">
-    <link rel="stylesheet" href="./css/bootstrap-material-design.min.css">
+    <link rel="stylesheet" href="./css/bootstrap-material-design.css">
     <link rel="stylesheet" href="./styles.css">
 
 
