Updating to new platform versions.

--- a/src/REstate.Service.AdminUI/wwwroot/index.html
+++ b/src/REstate.Service.AdminUI/wwwroot/index.html
@@ -7,39 +7,40 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./libs/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/ripples.min.css">
     <link rel="stylesheet" href="./css/bootstrap-material-design.css">
     <link rel="stylesheet" href="./css/styles.css">
 
-
-    <script src="./node_modules/ace-builds/src-noconflict/ace.js"></script>
-    <script src="./node_modules/ace-builds/src-noconflict/mode-json.js"></script>
-    <script src="./node_modules/ace-builds/src-noconflict/mode-sql.js"></script>
-    <script src="./node_modules/ace-builds/src-noconflict/mode-sqlserver.js"></script>
-    <script src="./node_modules/ace-builds/src-noconflict/mode-csharp.js"></script>
-    <script src="./node_modules/ace-builds/src-noconflict/mode-yaml.js"></script>
-    <script src="./node_modules/ace-builds/src-noconflict/mode-javascript.js"></script>
-    <script src="./node_modules/ace-builds/src-noconflict/mode-typescript.js"></script>
-    <script src="./node_modules/ace-builds/src-noconflict/mode-html.js"></script>
-    <script src="./node_modules/ace-builds/src-noconflict/theme-ambiance.js"></script>
+    
+    <script src="./libs/ace-builds/src-noconflict/ace.js"></script>
+    <script src="./libs/ace-builds/src-noconflict/mode-json.js"></script>
+    <script src="./libs/ace-builds/src-noconflict/mode-sql.js"></script>
+    <script src="./libs/ace-builds/src-noconflict/mode-sqlserver.js"></script>
+    <script src="./libs/ace-builds/src-noconflict/mode-csharp.js"></script>
+    <script src="./libs/ace-builds/src-noconflict/mode-yaml.js"></script>
+    <script src="./libs/ace-builds/src-noconflict/mode-javascript.js"></script>
+    <script src="./libs/ace-builds/src-noconflict/mode-typescript.js"></script>
+    <script src="./libs/ace-builds/src-noconflict/mode-html.js"></script>
+    <script src="./libs/ace-builds/src-noconflict/theme-ambiance.js"></script>
 
     <!-- 1. Load libraries -->
     <!-- IE required polyfills, in this exact order -->
-    <script src="./node_modules/es6-shim/es6-shim.min.js"></script>
-    <script src="./node_modules/systemjs/dist/system-polyfills.js"></script>
-    <script src="./node_modules/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
+    <script src="./libs/es6-shim/es6-shim.min.js"></script>
+    <script src="./libs/systemjs/dist/system-polyfills.js"></script>
+    <script src="./libs/angular2/es6/dev/src/testing/shims_for_IE.js"></script>
 
-    <script src="./node_modules/json-editor/dist/jsoneditor.js"></script>
+    <script src="./libs/json-editor/dist/jsoneditor.js"></script>
     <script src="./js/json-editor.code.editor.js"></script>
-    <script src="./node_modules/viz.js/viz.js"></script>
+    <script src="./libs/viz.js/viz.js"></script>
 
-    <script src="./node_modules/angular2/bundles/angular2-polyfills.js"></script>
-    <script src="./node_modules/systemjs/dist/system.src.js"></script>
-    <script src="./node_modules/rxjs/bundles/Rx.js"></script>
-    <script src="./node_modules/angular2/bundles/angular2.dev.js"></script>
-    <script src="./node_modules/angular2/bundles/http.dev.js"></script>
-    <script src="./node_modules/angular2/bundles/router.dev.js"></script>
+    <script src="./libs/angular2/bundles/angular2-polyfills.js"></script>
+    <script src="./libs/systemjs/dist/system.src.js"></script>
+    <script src="./libs/rxjs/bundles/Rx.js"></script>
+    <script src="./libs/angular2/bundles/angular2.dev.js"></script>
+    <script src="./libs/angular2/bundles/http.dev.js"></script>
+    <script src="./libs/angular2/bundles/router.dev.js"></script>
+    
 
     <!-- 2. Configure SystemJS -->
     <script>
@@ -62,8 +63,8 @@
 
     <restate-admin>Loading...</restate-admin>
 
-    <script src="./node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="./libs/jquery/dist/jquery.min.js"></script>
+    <script src="./libs/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./js/ripples.min.js"></script>
     <script src="./js/material.min.js"></script>
     <script src="./js/json-editor.material.theme.js"></script>
